test/fail/object-return.grace
method name {
  object { return }
}

name
